--- a/sitl/CMakeLists.txt
+++ b/sitl/CMakeLists.txt
@@ -5,7 +5,8 @@ project(cncSITL)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(cncSITL ../src/main.cpp)
+add_executable(cncSITL ../src/main.cpp Arduino.cpp)
+target_compile_definitions(cncSITL PRIVATE SITL)
 target_include_directories(cncSITL PUBLIC ${CMAKE_CUR_PROJECT_DIR}../sitl)
 target_include_directories(cncSITL PUBLIC ${CMAKE_CUR_PROJECT_DIR}../src)
 target_include_directories(cncSITL PUBLIC ${CMAKE_CUR_PROJECT_DIR}../.pio/libdeps/megaatmega2560/etl/src)
