--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,5 @@ framework = arduino
 lib_deps = 
     https://github.com/technik/etl.git
 
-build_flags = -std=c++20 -Wno-volatile -fcoroutines -fno-exceptions -fno-rtti
+build_flags = -std=c++20 -Wno-volatile -fcoroutines -fno-exceptions -fno-rtti -DNDEBUG
 build_unflags = -std=gnu++11
