Correct ratio constants for all axes. Can draw a square.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories(
 add_compile_definitions(SITL)
 
 # Motion controller test
-add_executable(motionControllerTest motion_controller_test.cpp ../src/motionController.cpp)
+add_executable(motionControllerTest motion_controller_test.cpp ../src/motionController.cpp ../sitl/Arduino.cpp)
 target_compile_definitions(motionControllerTest PRIVATE MOCK_CLOCK)
 set_target_properties(motionControllerTest PROPERTIES FOLDER test/)
 add_test(motion_controller_test motionControllerTest)
